<resources>

    <string name="app_name">Categories</string>
    <string name="bgScene">bgScene</string>
    <string name="scribe_e3">scribe_e3</string>
    <string name="scribee3">scribee3</string>
    <string name="scribet3">scribet3</string>
    <string name="writeEnglish">writeEnglish</string>
    <string name="writeThai">writeThai</string>
    <string name="fruitBtn">fruitBtn</string>
    <string name="catBtns">catBtns</string>
    <string name="toFruits">toFruits</string>
    <string name="toFruitt">toFruitt</string>
    <string name="bg_fruitPics">bg_fruitPics</string>
    <string name="bgFruitPics">bgFruitPics</string>
    <string name="appleShot">appleShot</string>
    <string name="stringbluebg">stringbluebg</string>
    <string name="enter_english_here">Enter English here</string>
...
    <string name="สะกดคำ">สะกดคำ</string>
    <string name="การเขียนตามคำบอก">การเขียนตามคำบอก</string>

    <string name="spell">"SสPะEกLดL"</string>
    <string name="back_to_start">backToStart</string>
    <string name="back_to_start_t">backToStart_t</string>
    <string name="two_fruit_e">twofruite</string>
    <string name="thstart">thstart</string>
    <string name="this_is_learning_thai">this_is_learning_thai</string>
    <string name="this_is_learning_eng">this_is_learning_eng</string>
    <string name="one_thousand_nine_hundred_fifty_three">one thousand nine hundred fifty three</string>
    <string name="numbers">numbers</string>
    <string name="engNumbers">engNumbers</string>enter_engnum_here
...
    <string name="hello_world">Hello World</string>
    <string name="thaitime">thaitime</string>
    <string name="thTimeWords">thTimeWords</string>
    <string name="eng_time">engTime</string>
    <string name="eng_time_words">engTimeWords</string>
    <string name="thai_time">thaiTime</string>
    <string name="userInputEng">user_input_eng</string>
    <string name="userInputThai">user_input_thai</string>
    <string name="dispEng">dispEng</string>
    <string name="engTime">engTime</string>
    <string name="spellBtn">spellBtn</string>
    <string name="backToMenu">backToMenu</string>
    <string name="backtomenu">backToMenu</string>
...
    <string name="toCashth">toCashth</string>
    <string name="what_do_you_want">What do you want</string>
    <string name="viewcashimage">viewcashimage</string>
    <string name="enterThaiHere">enterThaiHere</string>
    <string name="thweatherbtn">thweatherbtn</string>
    <string name="imagesClimateWords">imagesClimateWords</string>
    <string name="engWeatherStartBtn">engWeatherStartBtn</string>
    <string name="transengStartBtn">transengStartBtn</string>
    <string name="imagesTransportWords">imagesTransportWords</string>
    <string name="imagesVehicleWords">imagesVehicleWords</string>
    <string name="useHintinEng">useHintinEng</string>
    <string name="transthai">transthai</string>
    <string name="displayEnglish">displayEnglish</string>
...
    <string name="thaiColorIcon">thaiColorIcon</string>
    <string name="thaiUseicon">thaiUseicon</string>
    <string name="anotherMedicon">anotherMedicon</string>
    <string name="eNounAdjicon">eNounAdjicon</string>
    <string name="ambleiconcopy">ambleiconcopy</string>
    <string name="eBody">eBody</string>
    <string name="engweatherbtn">engweatherbtn</string>
    <string name="where">where</string>
    <string name="startfamilyeng">startfamilyeng</string>
    <string name="elocal_icon2">elocal_icon2</string>
    <string name="ework">ework</string>
    <string name="everbstart">everbstart</string>
    <string name="transeng">transeng</string>
...
